--- a/src/app/add-book/add-book.component.css
+++ b/src/app/add-book/add-book.component.css
@@ -1,4 +1,55 @@
-.row g-3 {
+
+mb-3 {
+  display: block;
+}
+.bookSignature {
+}
+
+.mat-form-field {
+  display: block;
+}
+
+textarea {
+  height: 100px;
+  resize: vertical;
+}
+
+
+
+
+
+
+
+#button-close {
+  display: block;
+}
+#modal-container {
   display: flex;
-  flex-direction: column;
+  justify-content: flex-start;
+  align-items: start;
+}
+
+
+.custom-modalbox {
+  border: 1px solid #000;
+  height: auto;
+  min-width: 550px;
+  max-width: 1000px;
+  width: auto;
+  min-height: 550px;
+  max-height: 1500px;
+  background-color: #fff;
+  justify-content: flex-start;
+  align-items: start;
+  position: absolute;
+  bottom: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+
+  padding-left:  5px;
+  padding-right: 5px;
+  overflow: hidden;
+  display: flex;
+
+
 }
