--- a/src/app/authors/authors.component.html
+++ b/src/app/authors/authors.component.html
@@ -1,25 +1,34 @@
-<div id="content">
-<main class="crud container">
- <ng-container *ngIf="authorslist.length > 0; else noAuthors">
+<section id="authorsList">
+  <div class="d-md-block d-lg-flex button-group">
+    <button type="button" class="c-btn c-btn--primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+            mat-raised-button (click)="openDialog('add')">Add a Author</button>
+
+    <button type="button" class="c-btn c-btn--primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+            mat-raised-button (click)="openDialog('edit')" >Modify a Author</button>
+
+
+  </div>
+
+ <ng-container *ngIf="authorslist != null; else noAuthors">
    <p [ngStyle]="{color: getColor()}"></p>
-   <table class="table">
+   <table class="table table-striped">
      <thead>
      <tr input class="form-check-input me-1" type="checkbox" value="" aria-label="..."  class="table-primary">
-       <th scope="col"></th>
-       <th scope="col">Lp</th>
-       <th scope="col">Author's forename</th>
-       <th scope="col">Author's surname</th>
+       <th scope="row"># </th>
+       <th scope="row">Lp</th>
+       <th scope="row">Author's forename</th>
+       <th scope="row">Author's surname</th>
      </tr>
      </thead>
-     <tbody>
+     <tbody *ngIf="authorslist as list">
 
-     <tr *ngFor="let author of authorslist; let i = index">
+     <tr *ngFor="let author of list | async let i = index">
        <td>
          <input #self class="form-check-input" type="checkbox" [value]="author.id" (change)="changeCheckboxList(self)">
        </td>
-       <td>
-         {{i+1}}
-       </td>
+
+       <th scope="row">{{(page-1) * size + i+1}}</th>
+
        <td>{{author.forename}}</td>
        <td>{{author.surname}}</td>
      </tr>
@@ -29,6 +38,46 @@
   <ng-template #noAuthors>
     <p>No authors</p>
   </ng-template>
-  <app-add-author></app-add-author>
-</main>
-</div>
+
+  <div class=pagination>
+    <ngb-pagination [collectionSize]="total | async" [pageSize]="size" [(page)]="page" [boundaryLinks]="true"  [disabled]='isDisabled'  (pageChange)="loadPage($event)" >
+
+      <ng-template ngbPaginationPages let-page let-pages="pages">
+        <li class="ngb-custom-pages-item" *ngIf="pages.length > 0">
+          <div class="mb-3 d-flex flex-nowrap px-2">
+            <label
+              id="paginationInputLabel"
+              for="paginationInput"
+              class="col-form-label me-2 ms-1"
+            >Page</label>
+            <input #i
+                   type="text"
+                   inputmode="numeric"
+                   pattern="[0-9]*"
+                   class="form-control custom-pages-input"
+                   id="paginationInput"
+                   [value]="page"
+                   (keyup.enter)="selectPage(i.value)"
+                   (blur)="selectPage(i.value)"
+                   (input)="formatInput($any($event).target)"
+                   aria-labelledby="paginationInputLabel paginationDescription"
+                   style="width: 2.5rem"
+            />
+            <span id="paginationDescription" class="col-form-label text-nowrap px-2">
+                  of {{pages.length}}</span>
+          </div>
+        </li>
+      </ng-template>
+    </ngb-pagination>
+    <hr>
+
+    <pre>Current page: {{page}}</pre>
+  </div>
+
+
+
+
+
+  <app-add-author #childAddRef [page]="page" [size]="size" ></app-add-author>
+
+</section>
